/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";
import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/decorator/testbed_decorator_adapter_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec.decorator";
option java_multiple_files = true;

// Specs for MoblyDecoratorAdapter.
message MoblyDecoratorAdapterSpec {
  extend DecoratorSpec {
    optional MoblyDecoratorAdapterSpec ext = 144150782;
  }
  repeated DeviceToJobSpec device_to_job_spec = 1 [(field_detail) = {
    help: "The decorator stack and parameters to run on each subdevice."
  }];
}
